implements MVP for UI

--- a/ui/index.html
+++ b/ui/index.html
@@ -26,13 +26,13 @@
       <nav class="sidebar-nav">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link" href="config.html"><i class="icon-settings"> </i> Configuration</a>
+            <a class="nav-link" href="reshifter/config.html"><i class="icon-settings"> </i> Configuration</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="backup.html"><i class="icon-cloud-download"> </i> Backup</a>
+            <a class="nav-link" href="reshifter/backup.html"><i class="icon-cloud-download"> </i> Backup</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="restore.html"><i class="icon-cloud-upload"> </i> Restore</a>
+            <a class="nav-link" href="reshifter/restore.html"><i class="icon-cloud-upload"> </i> Restore</a>
           </li>
         </ul>
       </nav>
