--- a/ui/backup.html
+++ b/ui/backup.html
@@ -40,11 +40,16 @@
 
     <!-- Main content -->
     <main class="main">
-      <div class="container-fluid">
-        <h3 class="display-3">Backup</h3>
-        <p class="lead">
-          Trigger and/or schedule a backup operation.
-        </p>
+      <div id="config" class="container-fluid">
+        <h3 class="display-3">Cluster backup</h3>
+        <form>
+          <div class="form-group">
+            <label for="endpoint">The etcd endpoint:</label>
+            <input class="form-control" id="endpoint" value="http://localhost:2379">
+          </div>
+          <div style="pointer: pointer;" class="btn btn-primary" id="dobackup">Start!</div>
+        </form>
+      <div style="margin-top: 50px;" id="backup-result"></div>
       </div>
     </main>
 
