inits UI updates to handle defaults

--- a/ui/backup.html
+++ b/ui/backup.html
@@ -45,7 +45,7 @@
         <form>
           <div class="form-group">
             <label for="endpoint">The etcd endpoint:</label>
-            <input class="form-control" id="endpoint" value="http://localhost:2379">
+            <input class="form-control" id="endpoint" value="">
           </div>
           <div style="pointer: pointer;" class="btn btn-primary" id="dobackup">Start!</div>
         </form>
