--- a/ui/index.html
+++ b/ui/index.html
@@ -26,13 +26,13 @@
       <nav class="sidebar-nav">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link" href="reshifter/config.html"><i class="icon-settings"> </i> Configuration</a>
+            <a class="nav-link" href="config.html"><i class="icon-settings"> </i> Configuration</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="reshifter/backup.html"><i class="icon-cloud-download"> </i> Backup</a>
+            <a class="nav-link" href="backup.html"><i class="icon-cloud-download"> </i> Backup</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="reshifter/restore.html"><i class="icon-cloud-upload"> </i> Restore</a>
+            <a class="nav-link" href="restore.html"><i class="icon-cloud-upload"> </i> Restore</a>
           </li>
         </ul>
       </nav>
@@ -40,9 +40,17 @@
 
     <!-- Main content -->
     <main class="main">
+
       <div id="config" class="container-fluid">
+      <h2>ReShifter</h2>
         <p class="lead">
-          Welcome to ReShifter!
+          … a cluster admin backup and restore tool for Kubernetes and OpenShift. See it in action:
+        </p>
+        <div style="margin-bottom: 50px">
+          <iframe width="630" height="394" src="https://www.useloom.com/embed/e590aedeb95b441fb23ab4f9e9e80c32" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <p class="lead">
+          Learn <a href="https://hackernoon.com/introducing-reshifter-for-kubernetes-backup-restore-migration-upgrade-ffaf78da36" target="_new">more …</a>
         </p>
       </div>
     </main>
