unifies backup ID, updates UI with flow

--- a/ui/backup.html
+++ b/ui/backup.html
@@ -44,7 +44,7 @@
         <h3 class="display-3">Cluster backup</h3>
         <form>
           <div class="form-group">
-            <label for="endpoint">The etcd endpoint:</label>
+            <label for="endpoint">Make a backup from Kubernetes cluster with following etcd endpoint:</label>
             <input class="form-control" id="endpoint" value="">
           </div>
           <div style="pointer: pointer;" class="btn btn-primary" id="dobackup">Start!</div>
