--- a/ui/config.html
+++ b/ui/config.html
@@ -52,12 +52,13 @@
             <legend>Default etcd</legend>
             <form>
               <div class="form-group">
-                <label for="endpoint">If no etcd endpoint is provided use this.</label>
+                <p>If no etcd endpoint is provided use this.</p>
                 <input class="form-control" id="endpoint" value="http://localhost:2379">
               </div>
             </form>
-            <legend>Output of backup</legend>
+            <legend>Default behaviour for backup</legend>
               <div class="form-check">
+                <p>Use this setting for storing the resulting backup.</p>
                 <label class="form-check-label">
                   <input type="radio" class="form-check-input" name="optionsRadios" id="remote" value="download" checked>
                   Download as ZIP file
@@ -66,7 +67,9 @@
               <div class="form-check">
                 <label class="form-check-label">
                   <input type="radio" class="form-check-input" name="optionsRadios" id="remote" value="s3">
-                  Upload to AWS S3 bucket <input class="form-control" id="bucket" value="mycluster">
+                  S3 compatible remote</br>
+                  Endpoint: <input class="form-control" id="remoteep" value="play.minio.io:9000">
+                  Bucket <input class="form-control" id="bucket" value="mycluster">
                 </label>
               </div>
           </fieldset>
