improves UI flow, adds demo

--- a/ui/restore.html
+++ b/ui/restore.html
@@ -44,11 +44,11 @@
         <h3 class="display-3">Cluster restore</h3>
         <form>
           <div class="form-group">
-            <label for="endpoint">The etcd endpoint:</label>
+            <label for="endpoint">Restore Kubernetes cluster with following etcd endpoint:</label>
             <input class="form-control" id="endpoint" value="http://localhost:2379">
           </div>
           <div class="form-group">
-            <label for="endpoint">The backup ID:</label>
+            <label for="endpoint">Using the following backup ID:</label>
             <input class="form-control" id="backupid" placeholder="1498413955">
           </div>
           <div style="pointer: pointer;" class="btn btn-primary" id="dorestore">Start!</div>
