--- a/ui/config.html
+++ b/ui/config.html
@@ -26,6 +26,9 @@
       <nav class="sidebar-nav">
         <ul class="nav">
           <li class="nav-item">
+            <a class="nav-link" href="./"><i class="icon-home"></i></a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="config.html"><i class="icon-settings"> </i> Configuration</a>
           </li>
           <li class="nav-item">
@@ -69,7 +72,7 @@
                   <input type="radio" class="form-check-input" name="optionsRadios" id="remote" value="s3">
                   S3 compatible remote</br>
                   Endpoint: <input class="form-control" id="remoteep" value="play.minio.io:9000">
-                  Bucket <input class="form-control" id="bucket" value="mycluster">
+                  Bucket <input class="form-control" id="bucket" value="reshifter-xxx">
                 </label>
               </div>
           </fieldset>
