--- a/ui/index.html
+++ b/ui/index.html
@@ -26,6 +26,9 @@
       <nav class="sidebar-nav">
         <ul class="nav">
           <li class="nav-item">
+            <a class="nav-link" href="./"><i class="icon-home"></i></a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="config.html"><i class="icon-settings"> </i> Configuration</a>
           </li>
           <li class="nav-item">
@@ -50,7 +53,7 @@
           <iframe width="630" height="394" src="https://www.useloom.com/embed/e590aedeb95b441fb23ab4f9e9e80c32" frameborder="0" allowfullscreen></iframe>
         </div>
         <p class="lead">
-          Learn <a href="https://hackernoon.com/introducing-reshifter-for-kubernetes-backup-restore-migration-upgrade-ffaf78da36" target="_new">more …</a>
+          Learn <a href="https://hackernoon.com/introducing-reshifter-for-kubernetes-backup-restore-migration-upgrade-ffaf78da36" target="_new">more</a> about ReShifter.
         </p>
       </div>
     </main>
