--- a/ui/restore.html
+++ b/ui/restore.html
@@ -26,6 +26,9 @@
       <nav class="sidebar-nav">
         <ul class="nav">
           <li class="nav-item">
+            <a class="nav-link" href="./"><i class="icon-home"></i></a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="config.html"><i class="icon-settings"> </i> Configuration</a>
           </li>
           <li class="nav-item">
