fixes Gorilla routing issue

--- a/ui/config.html
+++ b/ui/config.html
@@ -7,16 +7,16 @@
   <meta name="description" content="ReShifter">
   <meta name="author" content="Michael Hausenblas">
   <meta name="keyword" content="OpenShift,backup,restore,etcd">
-  <link rel="shortcut icon" href="./coreui/img/favicon.ico">
+  <link rel="shortcut icon" href=".//img/favicon.ico">
 
   <title>ReShifter: the OpenShift backup and restore tool</title>
 
   <!-- Icons -->
-  <link href="./coreui/css/font-awesome.min.css" rel="stylesheet">
-  <link href="./coreui/css/simple-line-icons.css" rel="stylesheet">
+  <link href=".//css/font-awesome.min.css" rel="stylesheet">
+  <link href=".//css/simple-line-icons.css" rel="stylesheet">
 
   <!-- Main styles for this application -->
-  <link href="./coreui/css/style.css" rel="stylesheet">
+  <link href=".//css/style.css" rel="stylesheet">
 </head>
 
 <body class="app">
@@ -91,10 +91,10 @@
   </footer>
 
   <!-- Bootstrap and necessary plugins -->
-  <script src="./coreui/js/jquery.min.js"></script>
-  <script src="./coreui/js/bootstrap.min.js"></script>
+  <script src=".//js/jquery.min.js"></script>
+  <script src=".//js/bootstrap.min.js"></script>
 
   <!-- Main scripts -->
-  <script src="./coreui/js/app.js"></script>
+  <script src=".//js/app.js"></script>
 </body>
 </html>
