fixes static HTML stuff

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
   <meta name="keyword" content="OpenShift,backup,restore,etcd">
   <link rel="shortcut icon" href=".//img/favicon.ico">
 
-  <title>ReShifter: the OpenShift backup and restore tool</title>
+  <title>ReShifter: the Kubernetes backup and restore tool</title>
 
   <!-- Icons -->
   <link href="./css/font-awesome.min.css" rel="stylesheet">
@@ -43,9 +43,8 @@
 
     <!-- Main content -->
     <main class="main">
-
       <div id="config" class="container-fluid">
-      <h2>ReShifter</h2>
+      <h3 class="display-3">ReShifter</h3>
         <p class="lead">
           … a cluster admin backup and restore tool for Kubernetes and OpenShift. See it in action:
         </p>
