--- a/ui/config.html
+++ b/ui/config.html
@@ -9,8 +9,8 @@
   <meta name="keyword" content="OpenShift,backup,restore,etcd">
   <link rel="shortcut icon" href=".//img/favicon.ico">
 
-  <title>ReShifter: the OpenShift backup and restore tool</title>
-
+  <title>ReShifter: the Kubernetes backup and restore tool</title>
+  
   <!-- Icons -->
   <link href=".//css/font-awesome.min.css" rel="stylesheet">
   <link href=".//css/simple-line-icons.css" rel="stylesheet">
