--- a/ui/restore.html
+++ b/ui/restore.html
@@ -9,7 +9,7 @@
   <meta name="keyword" content="OpenShift,backup,restore,etcd">
   <link rel="shortcut icon" href=".//img/favicon.ico">
 
-  <title>ReShifter: the OpenShift backup and restore tool</title>
+  <title>ReShifter: the Kubernetes backup and restore tool</title>
 
   <!-- Icons -->
   <link href=".//css/font-awesome.min.css" rel="stylesheet">
