adds automatic version info to UI

--- a/ui/index.html
+++ b/ui/index.html
@@ -46,12 +46,12 @@
       <div id="config" class="container-fluid">
       <h3 class="display-3">ReShifter</h3>
         <p class="lead">
-          … a cluster admin backup and restore tool for Kubernetes and OpenShift. See it in action:
+          … a cluster admin backup and restore tool for Kubernetes and OpenShift.
         </p>
-        <div style="margin-bottom: 50px">
-          <iframe width="630" height="394" src="https://www.useloom.com/embed/e590aedeb95b441fb23ab4f9e9e80c32" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <p class="lead">
+        <p>
+          Start with the configuration, then you can back up and restore your Kubernetes cluster.
+        </p>
+        <p>
           Learn <a href="https://hackernoon.com/introducing-reshifter-for-kubernetes-backup-restore-migration-upgrade-ffaf78da36" target="_new">more</a> about ReShifter.
         </p>
       </div>
@@ -65,10 +65,10 @@
   </footer>
 
   <!-- Bootstrap and necessary plugins -->
-  <script src=".//js/jquery.min.js"></script>
-  <script src=".//js/bootstrap.min.js"></script>
+  <script src="./js/jquery.min.js"></script>
+  <script src="./js/bootstrap.min.js"></script>
 
   <!-- Main scripts -->
-  <script src=".//js/app.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 </html>
