--- a/ui/backup.html
+++ b/ui/backup.html
@@ -64,10 +64,10 @@
   </footer>
 
   <!-- Bootstrap and necessary plugins -->
-  <script src=".//js/jquery.min.js"></script>
-  <script src=".//js/bootstrap.min.js"></script>
+  <script src="./js/jquery.min.js"></script>
+  <script src="./js/bootstrap.min.js"></script>
 
   <!-- Main scripts -->
-  <script src=".//js/app.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 </html>
