--- a/ui/config.html
+++ b/ui/config.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href=".//img/favicon.ico">
 
   <title>ReShifter: the Kubernetes backup and restore tool</title>
-  
+
   <!-- Icons -->
   <link href=".//css/font-awesome.min.css" rel="stylesheet">
   <link href=".//css/simple-line-icons.css" rel="stylesheet">
@@ -91,10 +91,10 @@
   </footer>
 
   <!-- Bootstrap and necessary plugins -->
-  <script src=".//js/jquery.min.js"></script>
-  <script src=".//js/bootstrap.min.js"></script>
+  <script src="./js/jquery.min.js"></script>
+  <script src="./js/bootstrap.min.js"></script>
 
   <!-- Main scripts -->
-  <script src=".//js/app.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 </html>
