--- a/ui/backup.html
+++ b/ui/backup.html
@@ -26,7 +26,7 @@
       <nav class="sidebar-nav">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link" href="./"><i class="icon-home"></i></a>
+            <a class="nav-link" href="./"><i class="icon-home"> </i> ReShifter</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="config.html"><i class="icon-settings"> </i> Configuration</a>
@@ -43,19 +43,22 @@
 
     <!-- Main content -->
     <main class="main">
-      <div id="config" class="container-fluid">
-        <h3 class="display-3">Cluster backup</h3>
-        <form>
+      <div class="container-fluid">
+        <h3 class="display-3">Backup</h3>
+        <p class="lead">
+          Make a backup of your Kubernetes cluster using the following etcd endpoint.
+        </p>
+        <fieldset class="form-group">
+          <legend>Endpoint</legend>
           <div class="form-group">
-            <label for="endpoint">Make a backup from Kubernetes cluster with following etcd endpoint:</label>
+            <p>Use this as default if no etcd endpoint is provided.</p>
             <input class="form-control" id="endpoint" value="http://localhost:2379">
           </div>
-          <div style="pointer: pointer;" class="btn btn-primary" id="dobackup">Start!</div>
-        </form>
-      <div style="margin-top: 50px;" id="backup-result"></div>
+        </fieldset>
+        <div style="pointer: pointer;" class="btn btn-primary" id="dobackup">Start backup</div>
+        <div style="margin-top: 50px;" id="backup-result"></div>
       </div>
     </main>
-
 
   </div>
 
