finalizes UI fixes

--- a/ui/backup.html
+++ b/ui/backup.html
@@ -55,7 +55,7 @@
             <input class="form-control" id="endpoint" value="http://localhost:2379">
           </div>
         </fieldset>
-        <div style="pointer: pointer;" class="btn btn-primary" id="dobackup">Start backup</div>
+        <div style="cursor: pointer;" class="btn btn-primary" id="dobackup">Start backup</div>
         <div style="margin-top: 50px;" id="backup-result"></div>
       </div>
     </main>
