--- a/ui/index.html
+++ b/ui/index.html
@@ -48,10 +48,10 @@
         <p class="lead">
           … a cluster admin backup and restore tool for Kubernetes.
         </p>
-        <p class="lead">
+        <p>
           ReShifter is a tool and a library for Kubernetes cluster backups. You can use it as a Web app (what you're looking at),
-          you can use it as a CLI tool, <code>rcli</code> you can download from the <a href="https://github.com/mhausenblas/reshifter/releases" target="_new">releases</a>
-          page, or you can you it in your own Go codebase as a <a href="https://godoc.org/github.com/mhausenblas/reshifter" target="_new">library</a>.
+          you can use it as a CLI tool (<code>rcli</code>) that you can download from the <a href="https://github.com/mhausenblas/reshifter/releases" target="_new">releases</a>
+          page, or you can use it in your own Go codebase as a <a href="https://godoc.org/github.com/mhausenblas/reshifter" target="_new">library</a>.
         </p>
         <p>
           Start now with <a href="config.html">Configuration</a> where you can set the etcd endpoint of your Kubernetes cluster,
