--- a/ui/restore.html
+++ b/ui/restore.html
@@ -60,7 +60,7 @@
               <input class="form-control" id="backupid" placeholder="1498xxxxxx">
           </div>
         </fieldset>
-        <div style="pointer: pointer;" class="btn btn-primary" id="dorestore">Start restore</div>
+        <div style="cursor: pointer;" class="btn btn-primary" id="dorestore">Start restore</div>
         <div style="margin-top: 50px;" id="restore-result"></div>
       </div>
     </main>
