inits filter in app; streamlines Makefile

--- a/ui/backup.html
+++ b/ui/backup.html
@@ -54,6 +54,11 @@
             <p>Use this as default if no etcd endpoint is provided.</p>
             <input class="form-control" id="endpoint" value="http://localhost:2379">
           </div>
+          <legend>Filter</legend>
+          <div class="form-group">
+              <p>Use this to restrict the objects you want to back up. If left empty, all Kubernetes objects will be backed up.</p>
+              <input class="form-control" id="filter" placeholder="deployments,services">
+          </div>
         </fieldset>
         <div style="cursor: pointer;" class="btn btn-primary" id="dobackup">Start backup</div>
         <div style="margin-top: 50px;" id="backup-result"></div>
