--- a/ui/config.html
+++ b/ui/config.html
@@ -55,7 +55,7 @@
                <form>
                  <div class="form-group">
                    <p>Use this as the default for backups and restores.</p>
-                   <input class="form-control" id="endpoint" value="http://localhost:2379">
+                   <input class="form-control" style="width: 300px;" id="endpoint" value="http://localhost:2379">
                  </div>
                </form>
                <legend>Target environment</legend>
