--- a/ui/restore.html
+++ b/ui/restore.html
@@ -52,7 +52,7 @@
           <legend>Endpoint</legend>
           <div class="form-group">
             <p>Use this etcd endpoint is to restore Kubernetes cluster.</p>
-            <input class="form-control" id="endpoint" value="http://localhost:2379">
+            <input class="form-control" style="width: 300px;" id="endpoint" value="http://localhost:2379">
           </div>
           <legend>Backup ID</legend>
           <div class="form-group">
