--- a/ui/backup.html
+++ b/ui/backup.html
@@ -52,7 +52,7 @@
           <legend>Endpoint</legend>
           <div class="form-group">
             <p>Use this as default if no etcd endpoint is provided.</p>
-            <input class="form-control" id="endpoint" value="http://localhost:2379">
+            <input class="form-control" style="width: 300px;" id="endpoint" value="http://localhost:2379">
           </div>
           <legend>Filter</legend>
           <div class="form-group">
