changes headline in UI

--- a/ui/backup.html
+++ b/ui/backup.html
@@ -9,7 +9,7 @@
   <meta name="keyword" content="OpenShift,backup,restore,etcd">
   <link rel="shortcut icon" href=".//img/favicon.ico">
 
-  <title>ReShifter: the Kubernetes backup and restore tool</title>
+  <title>ReShifter: Kubernetes cluster state management</title>
 
   <!-- Icons -->
   <link href=".//css/font-awesome.min.css" rel="stylesheet">
